feat(ui): modernize web UI with Vue 3 + shadcn-vue
Complete rewrite of the web UI using modern stack:
- Vue 3 with Composition API and TypeScript
- Vite for build tooling
- Tailwind CSS v4 with shadcn-vue components
- Dark minimal aesthetic

Features:
- TOS warning modal with acknowledgment
- Global status selector (online/idle/dnd)
- Server cards with connection status and actions
- Add/edit server form dialog
- Real-time activity log with WebSocket updates
- Responsive layout

Build changes:
- web/dist is now embedded instead of web/*
- Added web-build and web-dev Makefile targets
- Updated .gitignore for node_modules and dist

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 bin/
 dist/
 
+# Web UI build artifacts
+web/node_modules/
+web/dist/
+
 # Environment and config files with secrets
 .env*
 !.env.example
