feat(auth): add API key authentication for web UI and API
- Add auth middleware that validates API key from HTTP-only cookie
- Protect all /api/* routes (except /api/auth/* and /health)
- Add login/logout/check endpoints for auth flow
- Create LoginForm component with clean UI
- Show login page when API_KEY is set and user not authenticated
- Add logout button to header when authenticated
- Document API_KEY in .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # WARNING: Using a user token may violate Discord TOS. Use at your own risk.
 DISCORD_TOKEN=your_token_here
 
+# API key for web UI authentication (optional)
+# If set, users must enter this key to access the dashboard
+# Generate a secure random key, e.g.: openssl rand -hex 32
+API_KEY=
+
 # HTTP server port (optional, default: 8080)
 PORT=8080
 
