feat: add PostgreSQL support for persistent config storage
Add ConfigStore interface and DBStore implementation for PostgreSQL
storage. This allows config to persist across ephemeral deployments
(e.g., Render free tier) by storing in a database instead of file.

- Add config.ConfigStore interface for storage abstraction
- Add config.DBStore with PostgreSQL JSONB storage
- Auto-create table on startup
- Use DATABASE_URL env var to enable PostgreSQL mode
- Update all handlers to use ConfigStore interface
- Update documentation with PostgreSQL setup instructions

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # WARNING: Using a user token may violate Discord TOS. Use at your own risk.
 DISCORD_TOKEN=your_token_here
 
+# PostgreSQL connection URL (optional, recommended for cloud deployments)
+# If set, config is stored in PostgreSQL instead of a file
+# Example: postgres://user:password@host:5432/dbname
+DATABASE_URL=
+
 # API key for web UI authentication (optional)
 # If set, users must enter this key to access the dashboard
 # Generate a secure random key, e.g.: openssl rand -hex 32
@@ -11,7 +16,10 @@ API_KEY=
 # HTTP server port (optional, default: 8080)
 PORT=8080
 
-# Allowed WebSocket origins (optional, default: localhost)
+# Path to config file (optional, only used if DATABASE_URL is not set)
+CONFIG_PATH=config.json
+
+# Allowed WebSocket origins (optional, default: localhost + same-origin)
 # Comma-separated list of allowed origins for WebSocket connections
 # Example: http://localhost:8080,http://127.0.0.1:8080
 ALLOWED_ORIGINS=
