--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "vue-tsc -b && vite build",
     "dev": "vite",
+    "format": "prettier --write . --list-different --cache",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "preview": "vite preview",
     "typecheck": "vue-tsc --noEmit"
   },
@@ -22,10 +25,21 @@
     "vue": "^3.5.26"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-perfectionist": "^5.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-pkg": "^0.21.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0",
     "vue-tsc": "^3.2.1"
   }
