feat: add Discord webhook notifications for connection status
Send notifications to a Discord webhook when connections go down
or recover. Helps monitor service health on cloud deployments.

- Add internal/webhook package with Notifier service
- Integrate webhook with SessionManager for status events
- Add DISCORD_WEBHOOK_URL environment variable
- Update documentation and render.yaml

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ CONFIG_PATH=config.json
 # Comma-separated list of allowed origins for WebSocket connections
 # Example: http://localhost:8080,http://127.0.0.1:8080
 ALLOWED_ORIGINS=
+
+# Discord webhook URL for status notifications (optional)
+# Sends notifications when connections go down or recover
+# Get from: Discord Server Settings → Integrations → Webhooks → New Webhook
+DISCORD_WEBHOOK_URL=
