--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
     sync: false
   - key: DISCORD_TOKEN
     sync: false
+  - key: DISCORD_WEBHOOK_URL
+    sync: false
   region: singapore
   healthCheckPath: /health
   dockerContext: .
