--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0",
     "vue-tsc": "^3.2.1"
   }
 }
