feat(web): add file-based routing and unused dependency detection
- Add unplugin-vue-router for file-based routing with auto-generated types
- Add unplugin-unused to detect unused dependencies
- Move main app content to src/pages/index.vue
- Simplify app.vue to use RouterView
- Add vue-router with scroll behavior and query stringification

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -10,11 +10,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
+    /* Type */
+    "types": ["unplugin-vue-router/client"],
+
     /* Paths */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "typed-router.d.ts"]
 }
