--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "vue": "^3.5.26"
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -40,6 +41,8 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.1",
+    "unplugin-unused": "^0.5.6",
+    "unplugin-vue-router": "^0.19.1",
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0",
     "vue-tsc": "^3.2.1"
