--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
