docs: update documentation for required API_KEY
- Mark API_KEY as required in environment variables tables
- Update config structure to reflect store/ subpackage
- Update API router structure to reflect handlers/middleware/responses
- Update key generation commands

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DATABASE_URL=
 
 # API key for web UI authentication (optional)
 # If set, users must enter this key to access the dashboard
-# Generate a secure random key, e.g.: openssl rand -hex 32
+# Generate a secure random key, e.g.: echo "sk-live_$(openssl rand -base64 48 | tr -d '=+/')"
 API_KEY=
 
 # HTTP server port (optional, default: 8080)
