--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,20 @@ name: CI
 on:
   push:
     branches: ["*"]
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - ".gitignore"
   pull_request:
     branches: ["*"]
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - ".gitignore"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build-web:
@@ -14,13 +26,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
+
+      - name: Cache Bun dependencies
+        uses: actions/cache@v5
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('web/bun.lockb') }}
+          restore-keys: ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -55,17 +69,15 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: "1.25"
-
-      - name: Download dependencies
-        run: go mod download
+          cache: true
 
       - name: Run tests
         run: go test -v -race -coverprofile=coverage.out ./...
 
       - name: Check gateway coverage
         run: |
-          go test -coverprofile=gateway-coverage.out ./internal/gateway/...
-          go tool cover -func=gateway-coverage.out | grep total | awk '{print $3}' | sed 's/%//' | xargs -I {} sh -c '[ $(echo "{} >= 80" | bc) -eq 1 ] || (echo "Gateway coverage {} is below 80%" && exit 1)'
+          go tool cover -func=coverage.out -o=coverage-func.out
+          grep 'internal/gateway' coverage-func.out | tail -1 | awk '{print $3}' | sed 's/%//' | xargs -I {} sh -c '[ $(echo "{} >= 80" | bc) -eq 1 ] || (echo "Gateway coverage {} is below 80%" && exit 1)'
         continue-on-error: true
 
       - name: Build
@@ -89,6 +101,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: "1.25"
+          cache: true
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v9
